--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -40,32 +40,37 @@
 </head>
 <body>
 
-    <h1>Privacy Policy for Denbu App</h1>
+    <h1>Privacy Policy for Denbu PlayStore App</h1>
 
     <p><strong>Effective Date:</strong> 29th November 2023</p>
+    <p><strong> App on Play Store:</strong> com.denbuandroid.denbu_home </p>
+    <p><strong> Organisation on Play Store:</strong> denbuandroid </p>
 
     <h2>Introduction</h2>
-    <p>Welcome to the Denbu App. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our application. We are committed to protecting your personal information and your right to privacy.</p>
+    <p>Welcome to the Denbu PlayStore App. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our application. We are committed to protecting your personal information and your right to privacy.</p>
 
     <h2>Information Collection and Use</h2>
-    <p><strong>Types of Data Collected:</strong> We may collect personal data such as names, email addresses, and usage data including information about how the app is accessed and used.</p>
-    <p><strong>Usage of Data:</strong> The collected data is used for providing and improving the app's functionality, communicating with users, and enhancing user experience.</p>
+    <p><strong>Types of Data Collected:</strong> We collect personal data such as names, email addresses, and usage data including how the app is accessed and used.</p>
+    <p><strong>Usage of Data:</strong> Data is used for app functionality, communication, and user experience enhancement.</p>
 
     <h2>Data Sharing and Disclosure</h2>
-    <p><strong>Third Parties:</strong> We may share your information with third-party service providers, including but not limited to OpenAI's API, to conduct analytics or other services related to the improvement and optimization of our app. These providers are obligated to maintain the confidentiality and security of your information and are restricted from using it for any purpose other than providing services to us.</p>
-    <p><strong>Legal Requirements:</strong> We may disclose your information if required to do so by law or in the good faith belief that such action is necessary to comply with legal obligations, protect and defend our rights or property, and/or in urgent circumstances to protect the personal safety of users of the app or the public.</p>
+    <p><strong>Third Parties:</strong> Information may be shared with third-party service providers like OpenAI's API for app improvement services. They are bound to confidentiality and restricted from misusing your data.</p>
+    <p><strong>Legal Requirements:</strong> Data may be disclosed if legally required or to protect rights and safety.</p>
 
     <h2>Data Security</h2>
-    <p>We take the security of your data seriously and implement appropriate measures to prevent unauthorized access, disclosure, modification, or destruction of your personal information.</p>
+    <p>Data security measures are in place to prevent unauthorized access and misuse.</p>
 
     <h2>Children's Privacy</h2>
-    <p>Our app does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13.</p>
+    <p>We do not knowingly collect data from children under 13.</p>
 
     <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
+    <p>Policy updates will be posted on this page.</p>
+
+    <h2>Data Retention and Deletion</h2>
+    <p>We retain data only as necessary and provide mechanisms for data deletion upon user request.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:contact@denbu.io">contact@denbu.io</a>.</p>
+    <p>Contact us at <a href="mailto:contact@denbu.io">contact@denbu.io</a>.</p>
 
 </body>
 </html>
